# ConvNetVisualisation

./: .CNN.py.swp  .gitignore  AI.md  CNN.py  README.md  STL_meta.json  analyse_projections.py  conv.py  deconv.py  deconv_full.py  heatmap.py  hello.py  load_data.py  multi_channel_conv.py  pyproject.toml  store_projections.py  test.py  torch_conv2d_verify.py  train_CNN.py
learning/: max_pool.py  multi_channel_conv.py
